// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Localized Link Tests External Localized Links renders correctly when flag is passed 1`] = `
<a
  aria-current="page"
  className="sc-dlfnuX wcvZN"
  disabled={true}
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  style={Object {}}
>
  Test Link
</a>
`;

exports[`Localized Link Tests Internal Localized Links renders correctly when flag is passed 1`] = `
<a
  aria-current="page"
  className="sc-dlfnuX cvSRZk"
  disabled={false}
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  style={Object {}}
>
  Test Link
</a>
`;
